[tool.poetry]
name = "schedule-space-core"
version = "0.1.0"
description = ""
authors = ["Sentiago <arseny317@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
no_implicit_optional = true
warn_unreachable = true
show_error_codes = true